# Praxis

./: .cursorrules  .env.bak.before-praxis-api-token  .env.example  .gitignore  .ignore  .ripgreprc  AGENTS.md  CodeDBs  GEMINI.md  Makefile  README.md  SETUP.md  docker-compose.yml  mem_probe.sh  workflow_run_audit.queue.json
Code&DBs/Workflow/: .importlinter  DASHBOARD_QUICK_REFERENCE.txt  DEPLOYMENT_CHECKLIST.md  MANIFEST.in  MCP_SERVER_INDEX.md  SUPERVISOR_QUICKSTART.md  _pg_test_conn.py  pyproject.toml  requirements.runtime.txt  workflow
Code&DBs/Workflow/.claude/: launch.json
Code&DBs/Workflow/adapters/: README.md  __init__.py  api_task.py  cli_llm.py  context_adapter.py  credential_capture.py  credentials.py  deterministic.py  docker_runner.py  evidence.py  file_writer_adapter.py  http_transport.py  keychain.py  llm_client.py  llm_task.py  mcp_task.py  middleware.py  oauth_lifecycle.py  output_parser_adapter.py  permission_matrix.py  protocol_endpoint_runtime.py  protocol_events.py  provider_registry.py  provider_transport.py  provider_types.py  structured_output.py  task_profiles.py  verify_adapter.py
Code&DBs/Workflow/authority/: __init__.py  operator_control.py  transport_eligibility.py  workflow_class_resolution.py  workflow_schedule.py
Code&DBs/Workflow/contracts/: 10_V1_ENVELOPES.md  README.md  __init__.py  data_contracts.py  data_dictionary.py  dataset.py  domain.py  operation_catalog.py
Code&DBs/Workflow/core/: README.md  data_ops.py  object_truth_ops.py
Code&DBs/Workflow/devtools/: sweep_loopback_queue_dsns.py
Code&DBs/Workflow/memory/: crud.py  (+40 more)
(+4065 files in other folders)
