[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-engine"
version = "0.1.0"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
praxis = "surfaces.cli.praxis:main"
praxis-workflow = "surfaces.cli.main:main"
workflow = "surfaces.cli.main:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.runtime.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "contracts*", "memory*", "observability*", "policy*", "receipts*", "registry*", "runtime*", "storage*", "surfaces*"]
